--- a/style.css
+++ b/style.css
@@ -223,9 +223,8 @@ nav ul li a:hover::after{
 .threeBox-container{
     display: flex;
     flex-direction: row;
-    margin-top: 100px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin: 100px 100px 0 100px;
+    padding: 100px 0;
     color: #FFF;
     justify-content: space-evenly;
 }
@@ -234,13 +233,242 @@ nav ul li a:hover::after{
     background: #707070;
     width: 325px;
     height: 530px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.boxes h2{
+    margin-bottom: 10px;
+}
+
+.boxes p{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.box-button{
+    text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    background: #12A67C;
+    width: 140px;
+    height: 45px;
+    display: flex;
+    margin-top: 20px;
+    align-self: center;   
+    justify-content: center;
+    transition: background .75s, transform .75s;
+}
+
+.box-button a{
+    text-decoration: none;
+    position: relative;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: white;
+    font-size: 20px;
+    align-self: center;   
+}
+
+.box-donate{
+    margin-top: 40px;
+    width: 100px;
+}
+.box-button:hover{
+    transform: scale(1.05);
+}
+
+.box-button a::after{
+    height: 0px;
+}
+
+.box-img{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.footer{
+    background: #12A67C;
+    color: #FFF;  
+    padding-left: 80px;
+}
+
+.footer ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 30px;
+}
+.footer ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px;
+    padding-right: 10px;
+}
+
+.footer ul li a{
+    color: #FFF;
+    text-decoration: none;
+    font-size: 20px;
+    position: relative;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.footer ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #F26E22;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+.footer ul li a:hover::after{
+    width:100%;
+}
+
+.footer p {
+    margin-left: 10px;
+}
+
+.content-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.disclaimer-container{
+    flex-basis: 60%;
+    margin-right: 1%;
+    padding-bottom: 50px;
+}
+
+.address-container{
+    flex-basis: 39%;
+    padding-bottom: 50px;
+    margin-right: 50px;
+    text-align: right;
+}
+
+.address-container p{
+    margin-bottom: 5px;
+}
+
+.donate-container{
+    background: #F26E22;
+    color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    
+}
+.orange{
+    background: #FFF;
+    box-shadow: -1px 4px 9px 2px rgba(0,0,0,0.75);
+}
+
+.orange a {
+    color: #000;
+    font-size: 18px;
+}
+/*----------- css for vs ------------ */
+.background-container {
+    position: relative;
+}
+
+.background-container img {
+    width: 100%;
+    height: auto;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 99.6%;
+    background-color: rgba(18, 166, 124, 0.60);
+    z-index: 2;
+    color: #FFF;
+    font-size: 26px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay h1, .overlay p {
+    text-align:center;
+}
+
+.journey-container{
+    display: flex;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: #FFF;
+    color: #000;
+    justify-content: space-evenly;
+}
+
+.journey-img{
+    width: 600px;
+    height: auto;
+    /*margin-left: 100px;*/
+}
+
+.journey-container h1{
+    margin-bottom: 10px;
+    margin-top: 60px;
+    color: #12A67C;
+}
+.orange-bar{
+    background: #F26E22;
+    width: 193px;
+    height: 6px;
+    margin-bottom: 15px;
+
+}
+.journey-container p{
+    width: 500px;
+    font-size: 18px;
+}
+
+.progDescription-container{
+    display: flex;
+    margin-top: 100px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: #12A67C;
+    color: #FFF;
+    justify-content: space-evenly;
     
 }
 
-.footer{
-    background: #12A67C;
-    color: #FFF;
+.progDescription-img{
+    max-width: 55%;
+    height: auto;
+    width: 45%;
 }
+
+.progDescription-container h1{
+    margin-bottom: 10px;
+    margin-top: 40px;
+}
+
+.progDescription-container p{
+    width: 520px;
+    font-size: 18px;
+}
+
+
+
+
+
 
 
 /*------ css for small screens ------ */
