--- a/style.css
+++ b/style.css
@@ -137,6 +137,14 @@ nav ul li a:hover::after{
 
 }
 
+.green-bar{
+    background: #12A67C;
+    width: 193px;
+    height: 6px;
+    margin-bottom: 15px;
+
+}
+
 .threeBox-container{
     display: flex;
     flex-direction: row;
@@ -203,6 +211,7 @@ nav ul li a:hover::after{
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 .footer{
     background: #12A67C;
     color: #FFF;  
@@ -301,6 +310,7 @@ nav ul li a:hover::after{
 .ls-white-container h3{
     margin-bottom: 30px;
     margin-top: 20px;
+    width: 200px;
 }
 
 .ls-white-container p{
@@ -579,6 +589,9 @@ nav .fa-solid{
 
     }
 
+    nav ul li a{
+        color: #FFF;
+    }
     nav .fa-solid{
         display: block;
         font-size: 22px;
@@ -592,29 +605,22 @@ nav .fa-solid{
     
         
     .ls-green-container{
-        display: flex;
         flex-direction: column;
         margin-top: 100px;
-        padding-top: 100px;
-        padding-bottom: 100px;
-        justify-content: space-evenly;
+        padding: 150px 40px;
     }
 
     .ls-green-img{
-        max-width: 40%;
         height: auto;
-        width: 10%;
         padding: 20px;
     }
 
     .ls-green-container h1{
-        margin-bottom: 10px;
-        margin-top: 40px;
+        margin-top: 60px;
     }
 
     .ls-green-container p{
-        width: 520px;
-        font-size: 16px;
+        width: 100%;
     }
 
     .ls-green-container ul{
@@ -623,6 +629,91 @@ nav .fa-solid{
 
     .ls-green-container ul li{
         margin-bottom: 10px;
+    }
+
+    .ls-white-container{
+        flex-direction: column;
+        margin-top: 50px;
+        padding: 80px 40px;
+    }
+    
+    .ls-white-img{
+        width: auto;
+        margin-top: 60px;
+    }
+    
+    .ls-white-container h1{
+        margin-bottom: 10px;
+        margin-top: 40px;
+
+    }
+    
+    .ls-white-container h3{
+        margin-bottom: 30px;
+        margin-top: 20px;
+        width: 250px;
+    }
+    
+    .ls-white-container p{
+        width: 100%;
+        font-size: 16px;
+    }
+    
+    .ls-white-container ul{
+        margin-top: 20px;
+    }
+    
+    .ls-orange-container{
+        flex-direction: column;
+        margin-top: 100px;
+        padding: 150px 40px;   
+    }
+
+    .ls-orange-img{
+        width: auto;
+        margin-top: 50px;
+    }
+
+    .nurture-img{
+        width: auto;
+        margin-top: 50px;
+    }
+
+    .ls-orange-container h1{
+        margin-bottom: 10px;
+        margin-top: 0px;
+    }
+
+    .ls-orange-container p{
+        width: 100%;
+        font-size: 16px;
+    }
+
+    .threeBox-container{
+        display: flex;
+        flex-direction: row;
+        margin: 100px 100px 0 100px;
+        padding: 100px 0;
+        color: #FFF;
+        justify-content: space-evenly;
+    }
+
+    .boxes{
+        background: #707070;
+        width: 325px;
+        height: 530px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .boxes h2{
+        margin-bottom: 10px;
+    }
+
+    .boxes p{
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
 }
